Bug 214959 Xdefs.h not found while building with xft support on solaris patch by selsky@columbia.edu r=blizzard sr=rbs