gfx/src/gtk/nsFontMetricsXft.h
@@ -45,7 +45,6 @@
 #include "nsIFontMetricsGTK.h"
 
 #include <X11/Xlib.h>
-#include <X11/Xdefs.h>
 #include <X11/Xft/Xft.h>
 
 class nsFontXft;
